# stepflow

./: .dockerignore  .flake8  .gitignore  .licensure.yml  .pre-commit-config.yaml  .redocly.yaml  .release-please-manifest.json  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  ICLA.md  LICENSE  NOTICE  README.md  RELEASE.md  deny.toml  release-please-config.json  workflow.schema.json
crates/stepflow-analysis/: Cargo.toml
crates/stepflow-analysis/src/: dependency.rs  dependency_analysis.rs  diagnostics.rs  error.rs  lib.rs  reference.rs  tracker.rs  types.rs  validation.rs  workflow_analysis.rs
crates/stepflow-builtins/: Cargo.toml
crates/stepflow-builtins/src/: blob.rs  error.rs  eval.rs  lib.rs  load_file.rs  messages.rs  mock_context.rs  openai.rs  plugin.rs  registry.rs
crates/stepflow-compiler/: Cargo.toml
crates/stepflow-compiler/src/: component_info.rs  error.rs  lib.rs  slots.rs  testing.rs  uses.rs  validation.rs  value_refs.rs
crates/stepflow-compiler/tests/: snapshot.rs
crates/stepflow-components/: Cargo.toml
crates/stepflow-components-testing/: Cargo.toml
crates/stepflow-components-testing/src/: mock_plugin.rs
crates/stepflow-components/src/: error.rs  plugins.rs  step_plugin.rs
crates/stepflow-core/: Cargo.toml
crates/stepflow-core/src/: blob.rs  component.rs  dependencies.rs  flow_result.rs  lib.rs  schema.rs  status.rs  step_result.rs  workflow.rs
crates/stepflow-execution/: Cargo.toml
crates/stepflow-execution/src/: debug.rs  dependency_analysis.rs  enhanced_value_resolver.rs  error.rs  executor.rs  lib.rs  spawn_workflow.rs  state.rs  state_store.rs  tracker.rs  value_resolver.rs  workflow_executor.rs
crates/stepflow-execution/tests/: test_execution.rs
crates/stepflow-main/: Cargo.toml
crates/stepflow-main/src/: args.rs  cli.rs  error.rs  lib.rs  list_components.rs  main.rs  repl.rs  run.rs  serve.rs  server.rs  stepflow_config.rs  submit.rs  test.rs
crates/stepflow-main/tests/: test_commands.rs  test_run.rs
crates/stepflow-mock/: Cargo.toml
crates/stepflow-mock/src/: mock_plugin.rs
crates/stepflow-plugin/: Cargo.toml
crates/stepflow-plugin-protocol/: Cargo.toml
crates/stepflow-plugin-protocol/src/: incoming.rs  lib.rs  stdio.rs
crates/stepflow-plugin-protocol/tests/: python_test.rs  test_python.rs
crates/stepflow-plugin-testing/: Cargo.toml
crates/stepflow-plugin-testing/src/: mock_plugin.rs
crates/stepflow-plugin/src/: context.rs  error.rs  lib.rs  plugin.rs  plugins.rs  streaming.rs
crates/stepflow-protocol/: Cargo.toml
crates/stepflow-protocol/src/: blob_handlers.rs  component_execute.rs  component_info.rs  incoming.rs  incoming_handler.rs  initialization.rs  lib.rs  list_components.rs  messages.rs  schema.rs  stdio.rs
crates/stepflow-schema/: Cargo.toml
crates/stepflow-schema/src/: schema.rs
crates/stepflow-server/: Cargo.toml
crates/stepflow-server/src/: api.rs  components.rs  debug.rs  endpoints.rs  error.rs  executions.rs  health.rs  lib.rs  startup.rs  workflows.rs
crates/stepflow-server/tests/: integration_tests.rs  openapi_tests.rs
crates/stepflow-state/: Cargo.toml
crates/stepflow-state-sql/: Cargo.toml
crates/stepflow-state-sql/src/: lib.rs  migrations.rs  sqlite_state_store.rs
crates/stepflow-state/src/: error.rs  in_memory.rs  lib.rs  state_store.rs
crates/stepflow-steps/: Cargo.toml
crates/stepflow-steps/src/: lib.rs  plugins.rs  step_plugin.rs
crates/stepflow-workflow/: Cargo.toml
crates/stepflow-workflow/src/: component.rs  flow.rs  lib.rs  step.rs  value.rs
crates/stepflow-workflow/tests/: schema_test.rs
examples/kubernetes-batch-demo/pingora-lb/: Cargo.toml  DESIGN.md
integrations/docling/: CLAUDE.md  README.md  pyproject.toml
integrations/docling/tests/: __init__.py
integrations/langflow/: .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  cliff.toml  env.example  langflow_http_server.py  pyproject.toml  test_blob_minimal.py  test_comprehensive.py  test_real_context_hang.py
integrations/langflow/docker/: Dockerfile
integrations/langflow/examples/: basic_conversion.py  langflow_examples.md
integrations/langflow/tests/: __init__.py  conftest.py  mock_langflow_server.py
sdks/langflow/: README.md  pyproject.toml  test_example.py  test_langflow.py
sdks/python/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cliff.toml  generate.py  pyproject.toml
sdks/python/examples/: session_example.py
sdks/python/scripts/: generate-api-client.sh  generate_api_client.py  generate_endpoints.py  openapi-client-config.yaml
sdks/python/stepflow/: README.md  pyproject.toml
sdks/python/stepflow-api/: README.md  pyproject.toml
sdks/python/stepflow-client/: README.md  pyproject.toml
sdks/python/stepflow-core/: README.md  pyproject.toml
sdks/python/stepflow-orchestrator/: README.md  pyproject.toml
sdks/python/stepflow-py/: CHANGELOG.md  README.md  cliff.toml  pyproject.toml
sdks/python/stepflow-runtime/: README.md  pyproject.toml
sdks/python/stepflow-server/: README.md  pyproject.toml
sdks/python/stepflow-worker/: CHANGELOG.md  README.md  cliff.toml  pyproject.toml
sdks/python/tests/: test_expressions.py  test_server.py  (+8 more)
sdks/rust/: CLAUDE.md  Cargo.toml
stepflow-rs/: .dockerignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  README.md  cliff.toml  deny.toml
stepflow-rs/proto/: openapi-config.yaml
stepflow-rs/release/: .dockerignore  .gitignore  Dockerfile.stepflow-load-balancer.alpine  Dockerfile.stepflow-load-balancer.debian  Dockerfile.stepflow-server.alpine  Dockerfile.stepflow-server.build  Dockerfile.stepflow-server.debian  Dockerfile.stepflow.alpine  Dockerfile.stepflow.debian  README.md  build-docker-images.sh  download-release-binaries.sh
stepflow-rs/scripts/: prepare-release.sh
stepflow-rs/tests/: basic.yaml
tests/recovery/: .gitignore  Dockerfile.server.prebuilt  Dockerfile.worker  conftest.py  docker-compose.ci.yml  docker-compose.yml  helpers.py  pyproject.toml  stepflow-config.yml  test_dual_failure.py  test_failover_recovery.py  test_restart_recovery.py  test_subflow_recovery.py  test_worker_crash.py
(+2405 files in other folders)
