[workspace.package]
authors = ["Ben Chambers"]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
clap = { version = "4.5.35", features = ["derive", "env"] }
dynosaur = "0.2.0"
erased-serde = "0.4.6"
error-stack = { version = "0.5.0", features = ["serde"] }
futures = "0.3.31"
indexmap = { version = "2.8.0", features = ["serde"] }
insta = { version = "1.34.0", features = ["glob", "yaml" ] }
openai-api-rs = "6.0.6"
safer_owning_ref = "0.5.0"
schemars = { version = "0.8.22", features = ["indexmap2", "impl_json_schema", "url"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.140", features = ["preserve_order", "raw_value"] }
serde_yml = "0.0.12"
similar = "2.7.0"
similar-asserts = { version = "1.7.0", features = ["serde" ] }
static_assertions = "1.1.0"
stepflow-builtins = { path = "./crates/stepflow-builtins" }
stepflow-compiler = { path = "./crates/stepflow-compiler" }
stepflow-components-mcp = { path = "./crates/stepflow-components-mcp" }
stepflow-components-stdio = { path = "./crates/stepflow-components-client" }
stepflow-execution = { path = "./crates/stepflow-execution" }
stepflow-plugin = { path = "./crates/stepflow-plugin" }
stepflow-plugin-protocol = { path = "./crates/stepflow-plugin-protocol" }
stepflow-plugin-testing = { path = "./crates/stepflow-plugin-testing" }
stepflow-protocol = { path = "./crates/stepflow-protocol" }
stepflow-schema = { path = "./crates/stepflow-schema" }
stepflow-workflow = { path = "./crates/stepflow-workflow" }
test-with = { version = "0.14.10", features = ["runtime"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "process", "sync", "io-util", "time"]}
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json", "local-time" ] }
trait-variant = "0.1.2"
url = { version = "2.5.4", features = ["serde"]}
uuid = { version = "1.16.0", features = ["v4", "serde"]}
which = { version = "7.0.3", features = ["tracing"] }

# Enable max optimizations for dependencies, but not for our code
[profile.dev.package."*"]
opt-level = 3