[workspace.package]
authors = ["Ben Chambers"]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
bit-set = "0.8.0"
clap = { version = "4.5.35", features = ["derive", "env"] }
dynosaur = "0.2.0"
erased-serde = "0.4.6"
error-stack = { version = "0.5.0", features = ["serde"] }
futures = "0.3.31"
hex = "0.4"
indexmap = { version = "2.8.0", features = ["serde"] }
insta = { version = "1.34.0", features = ["glob", "yaml" ] }
insta-cmd = "0.6.0"
openai-api-rs = "6.0.6"
regex = "1.11.1"
walkdir = "2.5.0"
safer_owning_ref = "0.5.0"
schemars = { version = "0.8.22", features = ["indexmap2", "impl_json_schema", "url"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.140", features = ["preserve_order", "raw_value"] }
serde_yaml_ng = "0.10.0"
sha2 = "0.10"
similar = "2.7.0"
similar-asserts = { version = "1.7.0", features = ["serde" ] }
static_assertions = "1.1.0"
stepflow-builtins = { path = "./crates/stepflow-builtins" }
stepflow-components-mcp = { path = "./crates/stepflow-components-mcp" }
stepflow-core = { path = "./crates/stepflow-core" }
stepflow-execution = { path = "./crates/stepflow-execution" }
stepflow-mock = { path = "./crates/stepflow-mock" }
stepflow-plugin = { path = "./crates/stepflow-plugin" }
stepflow-protocol = { path = "./crates/stepflow-protocol" }
stepflow-state = { path = "./crates/stepflow-state" }
tempfile = "3.8"
test-with = { version = "0.14.10", features = ["runtime"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "process", "sync", "io-util", "time"]}
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json", "local-time" ] }
trait-variant = "0.1.2"
url = { version = "2.5.4", features = ["serde"]}
uuid = { version = "1.16.0", features = ["v4", "serde"]}
which = { version = "7.0.3", features = ["tracing"] }

# Enable max optimizations for dependencies, but not for our code
[profile.dev.package."*"]
opt-level = 3

[workspace.lints.rust]
rust_2018_idioms = "warn"
nonstandard_style = "warn"
future_incompatible = "warn"

[workspace.lints.clippy]
mod_module_files = "warn"
print_stderr = "warn"
print_stdout = "warn"
undocumented_unsafe_blocks = "warn"
unused_trait_names = "warn"

[workspace.metadata.cargo-machete]
ignored = []

[workspace.metadata.cargo-machete.renamed]
safer_owning_ref = "owning_ref"