[workspace.package]
authors = ["Ben Chambers"]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
homepage = "https://fuzzy-journey-4j3y1we.pages.github.io/"
repository = "https://github.com/riptano/stepflow"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
bit-set = "0.8.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive", "env"] }
dynosaur = "0.2.0"
erased-serde = "0.4.6"
error-stack = { version = "0.5.0", features = ["serde"] }
futures = "0.3.31"
glob = "0.3"
globset = "0.4"
hex = "0.4"
indexmap = { version = "2.8.0", features = ["serde"] }
insta = { version = "1.34.0", features = ["glob", "yaml" ] }
insta-cmd = "0.6.0"
openai-api-rs = { version = "6.0.6", features = ["rustls"], default-features = false }
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
reqwest-eventsource = "0.6"
rustyline = "14.0"
safer_owning_ref = "0.5.0"
schemars = { version = "1.0", features = ["indexmap2", "url2", "chrono04"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.140", features = ["preserve_order", "raw_value"] }
serde_with = { version = "3.14", features = ["schemars_1"]}
serde_yaml_ng = "0.10.0"
sha2 = "0.10"
similar = "2.7.0"
similar-asserts = { version = "1.7.0", features = ["serde" ] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "uuid", "sqlite"] }
static_assertions = "1.1.0"
stepflow-analysis = { path = "./crates/stepflow-analysis" }
stepflow-builtins = { path = "./crates/stepflow-builtins" }
stepflow-components-mcp = { path = "./crates/stepflow-components-mcp" }
stepflow-core = { path = "./crates/stepflow-core" }
stepflow-execution = { path = "./crates/stepflow-execution" }
stepflow-mock = { path = "./crates/stepflow-mock" }
stepflow-plugin = { path = "./crates/stepflow-plugin" }
stepflow-protocol = { path = "./crates/stepflow-protocol" }
stepflow-server = { path = "./crates/stepflow-server" }
stepflow-state = { path = "./crates/stepflow-state" }
stepflow-state-sql = { path = "./crates/stepflow-state-sql" }
tempfile = "3.8"
test-with = { version = "0.14.10", features = ["runtime"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "process", "sync", "io-util", "time"]}
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json", "local-time" ] }
trait-variant = "0.1.2"
url = { version = "2.5.4", features = ["serde"]}
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "indexmap", "rc_schema", "url", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
uuid = { version = "1.16.0", features = ["v4", "serde"]}
walkdir = "2.5.0"
which = { version = "7.0.3", features = ["tracing"] }

# Enable max optimizations for dependencies, but not for our code
[profile.dev.package."*"]
opt-level = 3

[workspace.lints.rust]
rust_2018_idioms = "warn"
nonstandard_style = "warn"
future_incompatible = "warn"

[workspace.lints.clippy]
print_stderr = "warn"
print_stdout = "warn"
undocumented_unsafe_blocks = "warn"
unused_trait_names = "warn"

[workspace.metadata.cargo-machete]
ignored = []

[workspace.metadata.cargo-machete.renamed]
safer_owning_ref = "owning_ref"