[package]
name = "stepflow-analysis"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Workflow dependency analysis for StepFlow"
homepage = "https://github.com/riptano/stepflow-rs"
repository = "https://github.com/riptano/stepflow-rs"

[dependencies]
stepflow-core = { path = "../stepflow-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
error-stack = "0.5"
thiserror = "1.0"
url = { version = "2.5.4", features = ["serde"]}