[package]
name = "stepflow-builtins"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Stepflow component plugin providing built-in components."

[dependencies]
dynosaur.workspace = true
error-stack.workspace = true
openai-api-rs.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
stepflow-plugin.workspace = true
stepflow-protocol.workspace = true
stepflow-schema.workspace = true
stepflow-workflow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
trait-variant.workspace = true

[dev-dependencies]
test-with.workspace = true