[package]
name = "stepflow-builtins"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Stepflow component plugin providing built-in components."

[dependencies]
dynosaur.workspace = true
error-stack.workspace = true
openai-api-rs.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
stepflow-plugin.workspace = true
stepflow-core.workspace = true
stepflow-state.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
trait-variant.workspace = true
uuid.workspace = true

[dev-dependencies]
test-with.workspace = true
tempfile.workspace = true 

[lints]
workspace = true
