[package]
name = "stepflow-compile"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Library for compiling and validating flows."

[dependencies]
error-stack.workspace = true
indexmap.workspace = true
stepflow-steps.workspace = true
stepflow-workflow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
serde_yml.workspace = true
stepflow-steps-testing.workspace = true
tokio.workspace = true
url.workspace = true