[package]
name = "stepflow-components-testing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Step execution plugin(s) used for tests."

[dependencies]
stepflow-components.workspace = true
stepflow-workflow.workspace = true