[package]
name = "stepflow-components"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Types and trait for the step execution plugins."

[dependencies]
dynosaur.workspace = true
error-stack.workspace = true
indexmap.workspace = true
stepflow-workflow.workspace = true
serde_json.workspace = true
thiserror.workspace = true
trait-variant.workspace = true

[dev-dependencies]
stepflow-components-testing.workspace = true
