[package]
name = "stepflow-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Core types and functionality for stepflow workflows, schemas, and components."

[dependencies]
indexmap.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
url.workspace = true

[dev-dependencies]
similar-asserts.workspace = true

[lints]
workspace = true
