[package]
name = "stepflow-core"
description = "Core types and functionality for stepflow workflows, schemas, and components."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
error-stack.workspace = true
hex.workspace = true
safer_owning_ref.workspace = true
schemars.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true
utoipa.workspace = true

[dev-dependencies]
insta.workspace = true
similar-asserts.workspace = true