[package]
name = "stepflow-execution"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Execution logic for workflows."

[dependencies]
error-stack.workspace = true
futures.workspace = true
safer_owning_ref.workspace = true
serde_json.workspace = true
stepflow-plugin.workspace = true
stepflow-core.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
