[package]
name = "stepflow-execution"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Execution logic for workflows."

[lib]
doctest = false

[dependencies]
bit-set.workspace = true
error-stack.workspace = true
futures.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
stepflow-plugin.workspace = true
stepflow-core.workspace = true
stepflow-state.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
stepflow-mock.workspace = true
serde_yaml_ng.workspace = true

[lints]
workspace = true
