[package]
name = "stepflow-main"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Stepflow CLI."

[dependencies]
clap.workspace = true
error-stack.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
stepflow-builtins.workspace = true
stepflow-core.workspace = true
stepflow-execution.workspace = true
stepflow-mock.workspace = true
stepflow-plugin.workspace = true
stepflow-protocol.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
serde.workspace = true
serde_yml.workspace = true
stepflow-protocol.workspace = true
insta.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
