[package]
name = "stepflow-main"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Stepflow CLI."

[lib]
doctest = false

[dependencies]
chrono.workspace = true
clap.workspace = true
error-stack.workspace = true
poem.workspace = true
poem-openapi.workspace = true
rustyline.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
stepflow-builtins.workspace = true
stepflow-core.workspace = true
stepflow-execution.workspace = true
stepflow-mock.workspace = true
stepflow-plugin.workspace = true
stepflow-protocol.workspace = true
stepflow-state.workspace = true
stepflow-state-sql.workspace = true
regex.workspace = true
reqwest.workspace = true
walkdir.workspace = true
similar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
insta-cmd.workspace = true
tempfile.workspace = true

[[bin]]
name = "stepflow"
path = "src/main.rs"

[lints]
workspace = true
