[package]
name = "stepflow-mock"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Mock component plugin for testing purposes."

[lib]
doctest = false

[dependencies]
error-stack.workspace = true
serde.workspace = true
stepflow-plugin.workspace = true
stepflow-core.workspace = true
tracing.workspace = true

[dev-dependencies]
static_assertions.workspace = true

[lints]
workspace = true
