[package]
name = "stepflow-plugin"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Types and trait for the step execution plugins."

[dependencies]
dynosaur.workspace = true
error-stack.workspace = true
futures.workspace = true
serde.workspace = true
stepflow-core.workspace = true
thiserror.workspace = true
trait-variant.workspace = true
uuid.workspace = true

[dev-dependencies]

[lints]
workspace = true
