[package]
name = "stepflow-plugin"
description = "Types and trait for the step execution plugins."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
dynosaur.workspace = true
error-stack.workspace = true
futures.workspace = true
serde.workspace = true
stepflow-core.workspace = true
stepflow-state.workspace = true
thiserror.workspace = true
tokio.workspace = true
trait-variant.workspace = true
tracing.workspace = true
uuid.workspace = true
dashmap = "6.0"
once_cell = "1.19"
serde_json.workspace = true

[dev-dependencies]