[package]
name = "stepflow-protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Types defining the stepflow JSON-RPC protocol."

[dependencies]
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
url.workspace = true