[package]
name = "stepflow-protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Types defining the stepflow JSON-RPC protocol."

[dependencies]
serde.workspace = true
serde_json.workspace = true
stepflow-core.workspace = true
uuid.workspace = true

[lints]
workspace = true
