[package]
name = "stepflow-state-sql"
version = "0.1.0"
edition = "2021"
description = "SQL-based StateStore implementation for StepFlow"

[lib]
doctest = false

[dependencies]
chrono.workspace = true
error-stack.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
stepflow-core.workspace = true
stepflow-state.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
