[package]
name = "stepflow-state"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "State management for workflow execution"

[dependencies]
error-stack.workspace = true
serde_json.workspace = true
stepflow-core.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
