[package]
name = "stepflow-state"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "State management for workflow execution"

[lib]
doctest = false

[dependencies]
chrono.workspace = true
error-stack.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
stepflow-core.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
