[package]
name = "stepflow-steps"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Types and trait for the step execution plugins."

[dependencies]
error-stack.workspace = true
indexmap.workspace = true
stepflow-workflow.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
stepflow-steps-testing.workspace = true