[package]
name = "stepflow-workflow"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Workflow representation, optimization and validation."

[dependencies]
indexmap.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
stepflow-schema.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
similar-asserts.workspace = true